tests/fail_call_take.rte
var inc = fn write p {
            p := *p + 1;
	    return *p;
          };
var q = write ((new 0) ! write);
inc(q); // error: init to write privilege requires unique ownership
q ! write;
q := *q + 1;
return *q - 2;



